--- a/cursojs/aula06/index copy 2.html
+++ b/cursojs/aula06/index copy 2.html
@@ -19,9 +19,10 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição!!</p>
     <script>
-        window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual é seu nome?')
+        var n1 = Number(window.prompt('Digite um número: '))
+        var n2 = Number(window.prompt('Digite outro numero: '))
+        var s = n1 + n2 
+        document.write(`A soma entre ${n1} mais ${n2} é igual a ${s}`)
     </script>
 </body>
 </html>
