--- a/cursojs/aula06/index copy.html
+++ b/cursojs/aula06/index copy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,8 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição!!</p>
     <script>
-        window.prompt('Qual é seu nome?')
+     var nome = window.prompt('Qual é seu nome?')
+     window.alert('É uma grande prazer em te conhecer, ' + nome + '!')
     </script>
 </body>
 </html>
