--- a/cursojs/aula06/ex03.html
+++ b/cursojs/aula06/ex03.html
@@ -13,16 +13,21 @@
         h1 {
             color: yellow;
         }
+        p {
+            font-family: 'Times New Roman', Times, serif;
+            color: aliceblue;
+        }
     </style>
 </head>
 <body>
-    <h1>Olá, mundo!</h1>
-    <p>Já me livrei da maldição!!</p>
+    <h1>Seja bem vindo ao site</h1>
+    <p id="resultado"></p>
     <script>
+        var nome = window.prompt('Fale seu nome: ')
         var n1 = Number(window.prompt('Digite um número: '))
         var n2 = Number(window.prompt('Digite outro numero: '))
         var s = n1 + n2 
-        document.write(`A soma entre ${n1} mais ${n2} é igual a ${s}`)
+        document.getElementById("resultado").innerHTML = `${s} é o resultado da conta ${nome}`
     </script>
 </body>
 </html>
