--- a/cursojs/aula06/ex03.html
+++ b/cursojs/aula06/ex03.html
@@ -26,6 +26,14 @@
             margin: auto;
             font-size: 30px;
         }
+        a {
+            text-decoration: none;
+            color: aliceblue;
+        }
+        a:hover {
+            background-color: black;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -33,6 +41,7 @@
         do Natan
     </h1>
     <div id="resultado"></div>
+    <a href="https://txnnxg.github.io/JavaScript/cursojs/aula06/ex03.html">Quer fazer mais alguma soma?</a>
     <script>
         var nome = window.prompt('Fale seu nome: ')
         var n1 = Number(window.prompt('Digite um número: '))
