--- a/cursojs/desafios/ex001.html
+++ b/cursojs/desafios/ex001.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do dia</title>
+    <title>Modelo de exercicio</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -14,11 +14,17 @@
     </header>
     
         <section>
-
+            <div>
+                Testando...
+            </div>
+            <div>
+                Olá!
+            </div>
         </section>
 
              <footer>
                     <p>&copy; CursoemVideo</p>
             </footer>
+            <script src="script.js"></script>
 </body>
 </html>
