--- a/aula14ex/ex016/ex001.html
+++ b/aula14ex/ex016/ex001.html
@@ -21,7 +21,7 @@
                 <input type="button" value="Contar" id="botao" onclick="clicou()">
             </div>
             <div id="msg">
-                
+                Mensagem
             </div>
         </section>
 
