Exercicio da aula 10 do guanabara

--- a/cursojs/aula10/ex006.html
+++ b/cursojs/aula10/ex006.html
@@ -20,5 +20,23 @@
     <div id="area">
         Interaja...
     </div>
+
+    <script>
+        var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
+        function clicar() {
+            a.innerText = 'Clicou'
+            a.style.background = 'red'
+        }
+        function entrar() {
+            a.innerText = 'Entrou'
+        }
+        function sair() {
+            a.innerText = 'Saiu'
+            a.style.background = 'rgb(42, 187, 42)'
+        }
+    </script>
 </body>
 </html>
