--- a/cursojs/desafios/desafio 3/modelo.html
+++ b/cursojs/desafios/desafio 3/modelo.html
@@ -21,7 +21,7 @@
             <p><input type="button" value="Verificar" onclick="verificar()"></p>
         </div>
 
-        <div>
+        <div id="res">
             Olá!
         </div>
     </section>
