Deixando o site responsivo

--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>ESTIMULANDO O CRESCIMENTO: ATIVIDADES FÍSICAS PARA DESENVOLVIMENTO MOTOR E REFLEXOS EM BEBÊS</h1>
+        <h1>ESTIMULANDO O CRESCIMENTO: ATIVIDADES <br>
+         FÍSICAS PARA DESENVOLVIMENTO MOTOR <br>
+             E REFLEXOS EM BEBÊS</h1>
         <nav>
             <a href="">Seila</a>
             <a href="">Seila</a>
