--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desenvolvimento Motor</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/mobile.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="estilos/tela-p-resolu.css">
 </head>
 <body>
     <header>
         <h1>DESENVOLVIMENTO MOTOR INFANTIL </h1>
             <p>CONHEÇA AS FASES E COMO ESTIMULAR</p>
-        <nav id="box">
-            <a href="">Home</a>
-            <a href="">Notícias</a>
-            <a href="">Curiosidades</a>
-            <a href="">Fale Conosco</a>
-        </nav>
+        <div id="menu">
+            <nav id="box">
+                <a href="">Home</a>
+                <a href="">Notícias</a>
+                <a href="">Curiosidades</a>
+                <a href="">Fale Conosco</a>
+            </nav>
+        </div>
     </header>
 
     <main>
