--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -9,19 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>DESENVOLVIMENTO MOTOR INFANTIL </h1>
-            <p>CONHEÇA AS FASES E COMO ESTIMULAR</p>
-        <div id="menu">
-            <nav id="box">
-                <a href="">Home</a>
-                <a href="">Notícias</a>
-                <a href="">Curiosidades</a>
-                <a href="">Fale Conosco</a>
-            </nav>
-        </div>
+        <img id="foto-h" src="" alt="">
     </header>
 
     <main>
+        <h1>DESENVOLVIMENTO MOTOR INFANTIL </h1>
+            <p>CONHEÇA AS FASES E COMO ESTIMULAR</p>
+
         <section>
             <h1>Desenvolvimento motor</h1>
             <p>Estimular o desenvolvimento motor do bebê é crucial para acelerar suas habilidades e promover sua saúde. Ajuda os pequenos a ganhar resistência motora e independência nos movimentos, especialmente durante o primeiro ano de vida. Com atitudes simples no dia a dia, é possível encorajar o bebê a se movimentar e fortalecer os músculos, sempre respeitando seus limites. Os estímulos devem ser adaptados à idade da criança e evoluir gradualmente ao longo do tempo. Se você quer saber como contribuir para o desenvolvimento do seu bebê com ações simples, este post pode te ajudar!</p>
