--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <header>
-        <img id="foto-h" src="" alt="">
+        <img id="foto1" src="imagens/simbolo-educa.png" alt="">
     </header>
 
     <main>
-        <h1>DESENVOLVIMENTO MOTOR INFANTIL </h1>
-            <p>CONHEÇA AS FASES E COMO ESTIMULAR</p>
+        <section id="s1">
+            <h1 id="t1">DESENVOLVIMENTO MOTOR INFANTIL </h1>
+            <p id="p1">CONHEÇA AS FASES E COMO ESTIMULAR</p>
+            <img id="foto02" src="imagens/foto-bb-1.jpg" alt="">
+        </section>
 
         <section>
             <h1>Desenvolvimento motor</h1>
@@ -22,20 +25,20 @@
         </section>
 
             <section>
-                <h2>O que significa estimular a criança</h2>
+                <h1>O que significa estimular a criança</h1>
                     <p>Estímulo é qualquer atividade destinada a promover o desenvolvimento das crianças. Na prática, isso ocorre por meio de brincadeiras e atividades com o objetivo de desenvolver habilidades motoras, mentais e emocionais. Embora existam profissionais especializados nessa área, os estímulos básicos podem ser proporcionados pela própria família da criança.</p>
             </section>
 
             <section>
-            <h3>Fase 4 meses a 1 ano</h3>
+            <h1>Fase 4 meses a 1 ano</h1>
             <p>
-                Movimentos repetitivos: Movimentos como balançar suavemente o bebê ou estimular a sucção durante a amamentação podem ajudar a fortalecer os reflexos primários.
-                Estímulos sensoriais: Apresentar diferentes texturas, sons e luzes suaves ao redor do bebê podem estimular seus sentidos e ajudar no desenvolvimento sensorial.
-                Contato físico: O contato pele a pele e o carinho podem estimular respostas emocionais e sensoriais no bebê, promovendo um desenvolvimento motor saudável.
-                Brinquedos sensoriais: Brinquedos coloridos, chocalhos e brinquedos que produzem sons podem atrair a atenção do bebê e encorajar movimentos reflexivos.
-                Posicionamento adequado: Colocar o bebê em diferentes posições, como de bruços ou de lado, pode promover o desenvolvimento de reflexos posturais e contribuir para o fortalecimento muscular.
-                Movimentos corporais: Movimentar suavemente os braços, pernas e cabeça do bebê pode ativar os reflexos de Moro e tônico, ajudando no desenvolvimento da coordenação motora e equilíbrio.
-                Estímulos visuais: Apresentar objetos coloridos e de alto contraste ao redor do bebê pode provocar respostas reflexas, como o reflexo de busca, ajudando a desenvolver a coordenação visual-motora.
+                Movimentos repetitivos: Movimentos como balançar suavemente o bebê ou estimular a sucção durante a amamentação podem ajudar a fortalecer os reflexos primários. <br>
+                Estímulos sensoriais: Apresentar diferentes texturas, sons e luzes suaves ao redor do bebê podem estimular seus sentidos e ajudar no desenvolvimento sensorial. <br>
+                Contato físico: O contato pele a pele e o carinho podem estimular respostas emocionais e sensoriais no bebê, promovendo um desenvolvimento motor saudável. <br>
+                Brinquedos sensoriais: Brinquedos coloridos, chocalhos e brinquedos que produzem sons podem atrair a atenção do bebê e encorajar movimentos reflexivos. <br>
+                Posicionamento adequado: Colocar o bebê em diferentes posições, como de bruços ou de lado, pode promover o desenvolvimento de reflexos posturais e contribuir para o fortalecimento muscular. <br>
+                Movimentos corporais: Movimentar suavemente os braços, pernas e cabeça do bebê pode ativar os reflexos de Moro e tônico, ajudando no desenvolvimento da coordenação motora e equilíbrio. <br>
+                Estímulos visuais: Apresentar objetos coloridos e de alto contraste ao redor do bebê pode provocar respostas reflexas, como o reflexo de busca, ajudando a desenvolver a coordenação visual-motora. <br>
                 Estímulos sonoros: Sons suaves e repetitivos podem despertar a atenção do bebê e promover o desenvolvimento dos reflexos de orientação auditiva.
             </p>
         </section>
