Criado efeito paralax e editado paragrafo e h1

--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -13,9 +13,12 @@
     </header>
 
     <main>
+            <div>
+                <h1 id="t1">DESENVOLVIMENTO MOTOR INFANTIL </h1>
+                <p id="p1">CONHEÇA AS FASES E COMO ESTIMULAR</p>
+            </div>
         <section id="s1">
-            <h1 id="t1">DESENVOLVIMENTO MOTOR INFANTIL </h1>
-            <p id="p1">CONHEÇA AS FASES E COMO ESTIMULAR</p>
+
         </section>
 
         <section>
@@ -65,7 +68,7 @@
     </main>
 
     <footer>
-        C Create by Natan Terror
+        &copy; Create by Natan Terror
     </footer>
     <script src="educa.js"></script>
 </body>
