--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/tela-p-resolu.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <img id="foto1" src="imagens/simbolo-educa.png" alt="">
+        <h1 id="nome"></h1>
     </header>
 
     <main>
-            <div>
+            <div id="titulo">
                 <h1 id="t1">DESENVOLVIMENTO MOTOR INFANTIL </h1>
                 <p id="p1">CONHEÇA AS FASES E COMO ESTIMULAR</p>
             </div>
@@ -68,7 +69,7 @@
     </main>
 
     <footer>
-        &copy; Create by Natan Terror
+        &copy; Create by Rafael Henrique Hirata Yogi & Mirian Lucia Joo
     </footer>
     <script src="educa.js"></script>
 </body>
