Colocado quebra de linha

--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -49,10 +49,10 @@
         <section>
             <h1>Fase 1 a 2 anos</h1>
             <p>
-                Brincadeiras e jogos: Jogos que envolvem movimentos como rolar, rastejar e se levantar incentivam o desenvolvimento da coordenação motora e equilíbrio.
-                Atividades de manipulação: Brinquedos que exigem pegar, empilhar e manipular objetos ajudam a desenvolver a destreza manual e a coordenação olho-mão.
-                Estímulos visuais: Apresentar imagens coloridas e objetos de diferentes formas e tamanhos pode promover a percepção visual e a capacidade de reconhecer padrões.
-                Desafios motores: Criar obstáculos simples que o bebê ou criança pequena possa superar como subir pequenas rampas ou atravessar túneis, estimula o desenvolvimento da força e equilíbrio.
+                Brincadeiras e jogos: Jogos que envolvem movimentos como rolar, rastejar e se levantar incentivam o desenvolvimento da coordenação motora e equilíbrio. <br>
+                Atividades de manipulação: Brinquedos que exigem pegar, empilhar e manipular objetos ajudam a desenvolver a destreza manual e a coordenação olho-mão. <br>
+                Estímulos visuais: Apresentar imagens coloridas e objetos de diferentes formas e tamanhos pode promover a percepção visual e a capacidade de reconhecer padrões. <br>
+                Desafios motores: Criar obstáculos simples que o bebê ou criança pequena possa superar como subir pequenas rampas ou atravessar túneis, estimula o desenvolvimento da força e equilíbrio. <br>
                 Interação social: Brincar com outras crianças e adultos estimula a comunicação, cooperação e socialização, além de promover o desenvolvimento de habilidades motoras em um contexto social.
             </p>
         </section>
@@ -60,8 +60,8 @@
         <section>
             <h1>Ambientes</h1>
             <p>
-                Ambiente doméstico: Um ambiente seguro e estimulante em casa proporciona oportunidades para o bebê explorar, movimentar-se e interagir com objetos e pessoas ao seu redor. Isso inclui espaços como o quarto do bebê, sala de estar e áreas externas, que podem ser adaptados para promover o desenvolvimento motor.
-                Creche ou berçário: Ambientes de cuidados infantis oferecem interação social, brinquedos educativos e espaços para atividades físicas, contribuindo para o desenvolvimento motor do bebê por meio de experiências compartilhadas com outras crianças e cuidadores.
+                Ambiente doméstico: Um ambiente seguro e estimulante em casa proporciona oportunidades para o bebê explorar, movimentar-se e interagir com objetos e pessoas ao seu redor. Isso inclui espaços como o quarto do bebê, sala de estar e áreas externas, que podem ser adaptados para promover o desenvolvimento motor. <br>
+                Creche ou berçário: Ambientes de cuidados infantis oferecem interação social, brinquedos educativos e espaços para atividades físicas, contribuindo para o desenvolvimento motor do bebê por meio de experiências compartilhadas com outras crianças e cuidadores. <br>
                 Parques e áreas ao ar livre: Ambientes externos proporcionam uma variedade de estímulos sensoriais, como texturas, cores, sons e movimentos, que estimulam o desenvolvimento motor
             </p>
         </section>
