Nome em javascript feito

--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -9,8 +9,8 @@
 </head>
 <body onload="carregar()">
     <header>
-        <img id="foto1" src="imagens/simbolo-educa.png" alt="">
-        <h1 id="nome"></h1>
+        <img id="foto1" src="imagens/simbolo-educa.png" alt=""> <h1 id="nome">Aqui vai o nome</h1>
+        
     </header>
 
     <main>
