--- a/cursojs/desafios/desafio 3/modelo.html
+++ b/cursojs/desafios/desafio 3/modelo.html
@@ -13,16 +13,18 @@
 
     <section>
         <div>
-            <p>Ano de nascimento <input type="number" name="txtano" id="txtano"></p>
+            <p>Ano de nascimento <input type="number" name="txtano" id="txtano" min="0"></p>
             <p>
-             Sexo:   Masculinho<INPUT TYPE="checkbox" NAME="OPCAO" VALUE="op1">
-                Feminito<INPUT TYPE="checkbox" NAME="OPCAO" VALUE="op2" CHECKED>
+             Sexo: <INPUT TYPE="radio" NAME="radsex" id="masc" checked>
+                    <label for="masc">Masculino</label>
+                    <input type="radio" name="radsex" id="fem">
+                    <label for="fem">Feminino</label>
             </p>
             <p><input type="button" value="Verificar" onclick="verificar()"></p>
         </div>
 
         <div id="res">
-            Olá!
+            Preencha os dados acima para ver o resultado
         </div>
     </section>
 
