--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -18,13 +18,11 @@
                 <h1 id="t1">DESENVOLVIMENTO MOTOR INFANTIL </h1>
                 <p id="p1">CONHEÇA AS FASES E COMO ESTIMULAR</p>
             </div>
-        <section id="s1">
-
-        </section>
-
         <section>
+            <img src="imagens/desenvolvimento.png" id="des" alt="">
             <h1>Desenvolvimento motor</h1>
-            <p>Estimular o desenvolvimento motor do bebê é crucial para acelerar suas habilidades e promover sua saúde. Ajuda os pequenos a ganhar resistência motora e independência nos movimentos, especialmente durante o primeiro ano de vida. Com atitudes simples no dia a dia, é possível encorajar o bebê a se movimentar e fortalecer os músculos, sempre respeitando seus limites. Os estímulos devem ser adaptados à idade da criança e evoluir gradualmente ao longo do tempo. Se você quer saber como contribuir para o desenvolvimento do seu bebê com ações simples, este post pode te ajudar!</p>
+            <p id="p2">Processo sequencial, contínuo e relacionado a idade cronológica. A criança quando nasce ela realiza movimento reflexos simples e grosseiros e conforme vai ocorrendo  o desenvolvimento  esse  movimento vai ficando organizado e complexo
+            </p>
         </section>
 
             <section>
