--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -25,10 +25,12 @@
             </p>
         </section>
 
+
             <section>
                 <h1>Bebê em diferentes posições</h1>
                 <h2>Recém-Nascido</h2>
                 <img src="imagens/recem-nascido.jpg" alt="">
+
                     <h3>Deitado de costas:</h3>
                 <ul>
                     <li>Braços e pernas flexionados;</li>
@@ -48,8 +50,319 @@
                     <li>Endireita a cabeça, mas não consegue mantê-la ereta por muito tempo;</li>
                     <li>Tronco arredondado.</li>
                 </ul>
-
             </section> 
+
+
+            <section>
+                <h2>1º Mês</h2>
+                    <img src="imagens/1mes.jpg" alt="">
+
+            <h3>Deitado de costas:</h3>
+                <ul>
+                    <li>Postura assimétrica;</li>
+                    <li>Membros mais estendidos, mas quadris ainda um pouco flexionados;</li>
+                    <li>Vira a cabeça para os lados;</li>
+                    <li>Membros dobrados.</li>
+                </ul>
+                        <h3>Deitado de barriga para baixo</h3>
+                            <ul>
+                                <li>Flexão dos quadris um pouco menor;</li>
+                                <li>Pode levantar um pouco a cabeça, mas não por muito tempo.</li>
+                            </ul>
+            <h3>Sentado:</h3>
+                    <li>Cabeça geralmente inclinada para frente;</li>
+                    <li>Tronco arredondado.</li>
+                </ul>
+                        <h3>Puxado para sentar</h3>
+                            <ul>
+                                <li>Cabeça ainda cai para trás, incapaz de acompanhar o tronco completamente;</li>
+                                <li>Tenta segurar a cabeça com as mãos.</li>
+                            </ul>
+            <h3>Em pé</h3>
+                <ul>
+                    <li>Com apoio nas axilas;</li>
+                    <li>Suporta o peso e dá passos reflexivos.</li>
+                </ul>
+
+            </section>
+
+
+            <section>
+                <h2>2º Mês</h2>
+                <img src="imagens/2mes.jpg" alt="">
+
+                <h3>Deitado de costas:</h3>
+                <ul>
+                    <li>Movimentos dos braços e pernas como chutes;</li>
+                    <li>Quadris podem não estar totalmente apoiados no chão durante os chutes;</li>
+                    <li>Mais movimentos espontâneos dos membros;</li>
+                    <li>Sorri e faz sons simples responsivamente.</li>
+                </ul>
+                        <h3>Deitado de barriga para baixo</h3>
+                            <ul>
+                                <li>Às vezes, o queixo fica um pouco fora do apoio;</li>
+                                <li>Ainda pode manter padrão de movimentos mais em flexão, mas os quadris estão mais próximos do chão.</li>
+                            </ul>
+                <h3>Em pé</h3>
+                <ul>
+                    <li>Falta de estabilidade ao ficar em pé</li>
+                </ul>
+            </section>
+
+
+            <section>
+                <h2>3º Mês</h2>
+                <img src="imagens/3mes.jpg" alt="">
+
+                <h3>Deitado de costas:</h3>
+                <ul>
+                    <li>Postura mais simétrica, com a cabeça no centro por mais tempo;</li>
+                    <li>Mãos mais freqüentemente abertas, tenta alcançar objetos;</li>
+                    <li>Mais extensão nos braços e pernas;</li>
+                    <li>Sorri e faz sons ao interagir com outras pessoas;</li>
+                    <li>Presta atenção nas faces das outras pessoas.</li>
+                </ul>
+                        <h3>Deitado de barriga para baixo</h3>
+                            <ul>
+                                <li>Postura mais estendida, com quadris apoiados no chão;</li>
+                                <li>Pode apoiar-se nos antebraços;</li>
+                                <li>Levanta a cabeça entre 45° e 90° do chão e mantém a posição para observar o ambiente.</li>
+                            </ul>
+            <h3>Sentado:</h3>
+                    <li>Mantém a cabeça ereta e o tronco levemente inclinado para a frente.</li>
+                </ul>
+                        <h3>Puxado para sentar</h3>
+                            <ul>
+                                <li>Atraso leve na elevação da cabeça, mas faz um esforço para acompanhar o tronco.</li>
+                            </ul>
+            </section>
+
+
+            <section>
+                <h2>4º Mês</h2>
+                <img src="imagens/4mes.jpg" alt="">
+
+                <h3>Deitado de costas:</h3>
+                <ul>
+                    <li>Pode manter as mãos fechadas, mas consegue abri-las para agarrar objetos e levá-los à boca;</li>
+                    <li>As pernas estão esticadas ou flexionadas e afastadas quando em repouso;</li>
+                    <li>Vira a cabeça na direção de sons rapidamente.</li>
+                </ul>
+                        <h3>Deitado de barriga para baixo</h3>
+                            <ul>
+                                <li>Cabeça e peito estão fora do apoio, com o rosto voltado para cima;</li>
+                                <li>Quadris esticados e pélvis apoiada no chão;</li>
+                                <li>Estende completamente os braços e pernas, como se estivesse nadando;</li>
+                                <li>Algumas crianças podem rolar para a posição deitada de costas.</li>
+                            </ul>
+                <h3>Em pé</h3>
+                <ul>
+                    <li>Com apoio, estica repetidamente as pernas e os dedos dos pés ficam curvados.</li>
+                </ul>
+            </section>
+
+
+            <section>
+                <h2>5º Mês</h2>
+                <img src="imagens/5mes.jpg" alt="">
+
+                <h3>Deitado de costas:</h3>
+                <ul>
+                    <li>Leva objetos à boca usando as mãos juntas;</li>
+                    <li>Segura objetos voluntariamente e pode transferi-los de uma mão para outra;</li>
+                    <li>Toca nos pés com as mãos e pode brincar nessa posição por um longo tempo, às vezes rola para o lado;</li>
+                    <li>Consegue levantar os quadris do chão com os pés apoiados;</li>
+                    <li>Postura em "rã".</li>
+                </ul>
+                        <h3>Deitado de barriga para baixo</h3>
+                            <ul>
+                                <li>Pode apoiar-se nos antebraços ou nas mãos;</li>
+                                <li>Transfere o peso de um braço para o outro para alcançar objetos à frente;</li>
+                                <li>Alguns bebês se movem como uma "rã" nessa posição;</li>
+                                <li>Rola da posição de barriga para cima para a de barriga para baixo.</li>
+                            </ul>
+                <h3>Sentado:</h3>
+                    <ul>
+                        <li>A cabeça acompanha o movimento do tronco.</li>
+                    </ul>
+                        <h3>Em pé</h3>
+                            <ul>
+                                <li>Suporta quase todo o peso.</li>
+                            </ul>
+            </section>
+
+
+            <section>
+                <h2>6º Mês</h2>
+                <img src="imagens/6mes.jpg" alt="">
+
+                <h3>Deitado de costas:</h3>
+                <ul>
+                    <li>Rola da posição deitada de costas para a de barriga para baixo;</li>
+                    <li>Consegue levar os pés à boca;</li>
+                    <li>Apoia-se com toda a mão e a base do polegar quando em posição deitada de costas;</li>
+                    <li>Começa a fazer sons de balbucio;</li>
+                    <li>Vira a cabeça na direção de sons.</li>
+                </ul>
+                        <h3>Deitado de barriga para baixo</h3>
+                            <ul>
+                                <li>Apoia-se com uma das mãos.</li>
+                            </ul>
+            <h3>Sentado:</h3>
+                    <li>Consegue ficar sentado sem apoio por um curto período de tempo; o tronco fica reto e as mãos apoiam-se à frente na superfície.</li>
+                </ul>
+                        <h3>Puxado para sentar</h3>
+                            <ul>
+                                <li>Precisa de ajuda com a cabeça e os membros superiores para sentar.</li>
+                            </ul>
+            <h3>Em pé</h3>
+                <ul>
+                    <li>Pula com vigor quando segurado em pé.</li>
+                </ul>
+            </section>
+
+
+            <section>
+                <h2>8º Mês</h2>
+                <img src="imagens/8mes.jpg" alt="">
+
+                <h3>Deitado de costas:</h3>
+                <ul>
+                    <li>Os movimentos de "chute" desaparecem;</li>
+                    <li>As pernas estão esticadas, mais juntas e ligeiramente viradas para fora;</li>
+                    <li>Geralmente não gostam de ficar deitados de costas, preferem rolar ou sentar;</li>
+                    <li>Começa a pegar objetos fora de alcance;</li>
+                    <li>Por volta dos 9 meses, pode usar o polegar e os dedos para pegar objetos e apontar com o indicador;</li>
+                    <li>Começa a soltar objetos.</li>
+                </ul>
+                        <h3>Deitado de barriga para baixo</h3>
+                            <ul>
+                                <li>Passa para a posição sentada;</li>
+                                <li>Rasteja para trás sobre o abdômen;</li>
+                                <li>Por volta dos 9 meses, passa da posição sentada para a de barriga para baixo e rasteja para frente.</li>
+                            </ul>
+            <h3>Sentado:</h3>
+                    <li>Consegue ficar sentado sem apoio;</li>
+                    <li>Recupera a posição ereta quando cai para os lados;</li>
+                    <li>Pode sentar-se de lado com apoio em um dos braços;</li>
+                    <li>Leva todos os objetos à boca.</li>
+                </ul>
+                        <h3>Puxado para sentar</h3>
+                            <ul>
+                                <li>Consegue puxar-se sozinho com a ajuda do cuidador.</li>
+                            </ul>
+            <h3>Em pé</h3>
+                <ul>
+                    <li>Consegue sustentar-se nos membros inferiores e segurar-se nos móveis; puxa-se para ficar de pé e toda a sola do pé toca o chão.</li>
+                </ul>
+            </section>
+
+
+            <section>
+                <h2>10º Mês</h2>
+                <img src="imagens/10mes.jpg" alt="">
+
+                <h3>Deitado de costas:</h3>
+                <ul>
+                    <li>Brinca jogando e pegando objetos;</li>
+                    <li>Acena com a mão;</li>
+                    <li>Usa a pinça para pegar objetos, mas às vezes abre demais a mão;</li>
+                    <li>A partir dos 12 meses, aprende a pegar objetos com mais precisão.</li>
+                </ul>
+                        <h3>Deitado de barriga para baixo</h3>
+                            <ul>
+                                <li>Engatinha de forma cruzada, apoiando-se nas mãos e nos joelhos;</li>
+                                <li>Faz movimentos de balanço para frente e para trás nessa posição;</li>
+                                <li>Alguns bebês podem engatinhar de forma parecida com a de um urso.</li>
+                            </ul>
+            <h3>Sentado:</h3>
+                    <li>Consegue sentar-se sozinho;</li>
+                    <li>Gira em círculos para pegar objetos;</li>
+                    <li>Estende os braços para trás para se proteger;</li>
+                    <li>Pode passar da posição sentada para a de pé.</li>
+                </ul>
+                <h3>Em pé</h3>
+                <ul>
+                    <li>Consegue ficar de pé apoiando-se nos móveis; levanta um pé e pode subir no sofá ou na cama;</li>
+                    <li>Volta a sentar-se geralmente usando as pernas dobradas.</li>
+                </ul>
+                <p id="verde">Esses são os principais marcos motores e posições que os bebês podem apresentar em seus primeiros meses de vida. É importante observar o desenvolvimento do bebê e fornecer apoio adequado em cada etapa para promover um desenvolvimento saudável.</p>
+            </section>
+
+
+            <section>
+                <h2>15º Mês</h2>
+                <img src="imagens/15mes.jpg" alt="">
+
+                <ul>
+                    <li>Caminha sozinho, mas costuma cair com freqüência;</li>
+                    <li>Fala várias palavras usando expressões comuns;</li>
+                    <li>Aponta para as coisas que quer.</li>
+                </ul>
+            </section>
+
+
+            <section>
+                <h2>18º Mês</h2>
+                <img src="imagens/18mes.jpg" alt="">
+
+                <ul>
+                    <li>Joga a bola;</li>
+                    <li>Senta sozinho em uma cadeira pequena e consegue subir em uma cadeira de adulto;</li>
+                    <li>Anda, às vezes cai, anda rápido, mas tropeça;</li>
+                    <li>Corre com passos curtos;</li>
+                    <li>Tira as próprias roupas;</li>
+                    <li>Fala muitas palavras compreensíveis.</li>
+
+                </ul>
+            </section>
+
+
+            <section>
+                <h2>21º Mês</h2>
+                <img src="imagens/21mes.jpg" alt="">
+
+                <ul>
+                    <li>Anda e brinca agachado;</li>
+                    <li>Desce escadas com o apoio de uma mão, colocando ambos os pés no mesmo degrau;</li>
+                    <li>Chuta uma bola;</li>
+                    <li>Segura bem o copo, derrama quando está cheio e joga fora quando acaba.</li>
+                </ul>
+            </section>
+
+
+            <section>
+                <h2>24º Mês</h2>
+                <img src="imagens/24mes.jpg" alt="">
+
+                <ul>
+                    <li>Corre sem cair muito;</li>
+                    <li>Pés e pernas mais flexíveis;</li>
+                    <li>Sobe e desce escadas sozinho;</li>
+                    <li>Se agacha freqüentemente para brincar sozinho;</li>
+                    <li>Começa a girar a mão quando leva a colher à boca;</li>
+                    <li>Joga a bola para baixo;</li>
+                    <li>Veste-se e escova os dentes com ajuda;</li>
+                    <li>Lava e seca as mãos, embora não tão corretamente;</li>
+                    <li>Forma sentenças combinando palavras;</li>
+                    <li>Usa pronomes como eu, meu e você.</li>
+                </ul>
+            </section>
+
+
+            <section>
+                <h2>Ambiente</h2>
+                <img src="imagens/amb.jpg" alt="">
+
+                <ul>
+                    <li><strong>Espaço físico:</strong> Ambientes amplos e seguros permitem que a criança pratique habilidades motoras como correr, pular e subir.</li>
+                    <li><strong>Disponibilidade de materiais:</strong> Brinquedos e equipamentos adequados incentivam o desenvolvimento motor através de atividades como manipulação, empilhamento e encaixe.</li>
+                    <li><strong>Estímulos sensoriais:</strong> Ambientes com texturas, cores e sons variados estimulam a exploração e o desenvolvimento das habilidades motoras da criança.</li>
+                    <li><strong>Interação social:</strong> Brincadeiras com outras crianças e adultos promovem atividades em grupo que contribuem para o desenvolvimento motor e social.</li>
+                    <li><strong>Supervisão e encorajamento:</strong> A supervisão atenta e encorajadora dos adultos permite que a criança se sinta segura para experimentar novos movimentos, desenvolvendo confiança e autoestima.</li>
+                    <li><strong>Modelagem de comportamento:</strong> Exemplos positivos de adultos ativos podem influenciar a criança a imitar esses comportamentos, desenvolvendo suas próprias habilidades motoras.</li>
+                </ul>
+            </section>
     </main>
 
     <footer>
