--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -320,7 +320,7 @@
 
             <section>
                 <h2>21º Mês</h2>
-                <img src="imagens/21mes.jpg" alt="">
+                <img src="imagens/21mes.jpg" class="fot" alt="">
 
                 <ul>
                     <li>Anda e brinca agachado;</li>
@@ -333,7 +333,7 @@
 
             <section>
                 <h2>24º Mês</h2>
-                <img src="imagens/24mes.jpg" alt="">
+                <img src="imagens/24mes.jpg" class="fot" alt="">
 
                 <ul>
                     <li>Corre sem cair muito;</li>
