--- a/cursojs/trabalho do rafa/educa.html
+++ b/cursojs/trabalho do rafa/educa.html
@@ -16,7 +16,7 @@
     <main>
             <div id="titulo">
                 <h1 id="t1">DESENVOLVIMENTO MOTOR INFANTIL </h1>
-                <p id="p1">CONHEÇA AS FASES E COMO ESTIMULAR</p>
+                <p id="p1">CONHEÇA AS FASES</p>
             </div>
         <section>
             <img src="https://i.pinimg.com/564x/42/a7/26/42a7266be00e6cb463babd4519fca1f4.jpg" id="des" alt="">
