--- a/cursojs/aula14ex/ex016/contando.html
+++ b/cursojs/aula14ex/ex016/contando.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Super Contador</title>
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
         </div>
 
         <div id="res">
-            Preparando a contagem...
+            
         </div>
     </section>
 
