--- a/cursojs/aula14ex/ex017/tabuada.html
+++ b/cursojs/aula14ex/ex017/tabuada.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="modelo/style.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-            <h1>Titulo</h1>
+            <h1>Tabuada</h1>
     </header>
 
     <section>
         <div>
-            Testanto..
+            <p>Numero: <input type="number" name="" id="numero"> <input type="button" value="Gerar Tabuada" onclick="gerar()"></p>
         </div>
 
-        <div>
-            Olá!
+        <div id="res">
+            Gerando tabuada...
         </div>
     </section>
 
